# pokeupine_florentxlundaisociety

./: .gitignore  LICENSE  README.md  pyproject.toml  technical_plan.archive.md  technical_plan.md
ingestion/: __init__.py  build_pack.py  chunk.py  extract_text.py  fetch.py  llm_extract.py  profile.py  validate.py
ingestion/profiles/: gdpr.json  pci-dss.json
pokeupine/: __init__.py  __main__.py  cli.py  config.py  crypto.py  llm.py  merkle.py  registry.py  schemas.py
pokeupine-registry/: index.json
pokeupine-registry/keys/: registry-2026.pub
pokeupine-registry/packs/gdpr/2016.679/: pack.json
pokeupine-registry/packs/pci-dss/4.0.0/: pack.json
pokeupine/report/: rich_report.py
pokeupine/scan/: __init__.py  runner.py  walker.py
pokeupine/scan/engines/: __init__.py  ast_check.py  dataflow.py  decorator.py  llm_judge.py  regex.py
tests/: conftest.py  test_clean_app.py  test_cli.py  test_crypto.py  test_engines.py  test_ingestion.py  test_luhn_pan.py  test_merkle.py  test_registry.py  test_scan.py  test_schemas.py  test_tampered_pack.py  test_walker.py
vulnerable-checkout/: README.md  SECURITY.md  app.py  requirements.txt
